[tool.poetry]
name = "kallia"
version = "0.1.0"
description = ""
authors = ["KalliaAI <kalliadotai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.20"
fastapi = "^0.111.0"
langchain-groq = "^0.1.4"
pandas = "^2.2.2"
duckdb = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
